make readable; fixes #29

--- a/examples/index.less
+++ b/examples/index.less
@@ -153,6 +153,15 @@ header.links {
   tr:nth-child(2n) {
     background: #F9F9F9;
   }
+
+  // validation table styles
+  .validationTable code {
+    background-color: transparent;
+  }
+  .validationTable th {
+    border-bottom: none;
+    text-align: center;
+  }
   .validationTable td:nth-child(1) > code {
     display: block;
     vertical-align: top;
@@ -171,7 +180,7 @@ header.links {
     }
   }
   .validationTable td:nth-child(2) code {
-    color: green;
+    color: #517900;
   }
   .validationTable td:nth-child(4) {
     display: block;
@@ -180,14 +189,6 @@ header.links {
     border-top: 1px solid #DDD;
     height: auto;
   }
-  .validationTable th {
-    border-bottom: none;
-    text-align: center;
-  }
-  .validationTable code {
-    background-color: transparent;
-  }
-
 }
 
 /*********************************************************
